--- a/src/main/resources/templates/prendas/edit_prendas.html
+++ b/src/main/resources/templates/prendas/edit_prendas.html
@@ -32,9 +32,18 @@
                     <td>Descripción:</td>
                     <td><input type="text" th:field="*{descripcion}" /></td>
                 </tr>
-                <tr>
+				<tr>
                     <td>Tipo:</td>
-                    <td><input type="text" th:field="*{tipo}" /></td>
+                    <td th:object="${tipoPrendas}">
+                        <select id="tipo" name="tipo">
+                              <option value="">Elija un tipo</option>
+                            <option th:each="tipoPrenda : ${tipoPrendas}"
+                                    th:value="${tipoPrenda}"
+                                    th:text="${tipoPrenda.descripcion}"
+                                    th:selected="${tipoPrenda==tipoPrendaActual}">
+                            </option>
+                        </select>
+                    </td>
                 </tr>
                 <tr>
                     <td>Precio Base:</td>
