--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,8 @@
     <div align="left">
         <ul>
             <li><a href="/tienda/prendas/list">Listado de prendas</a></li>
+        	<li><a href="/tienda/clientes/list">Listado de clientes</a></li>
+        	<li><a href="/tienda/ventas/list">Listado de ventas</a></li>
         </ul>
         <br />
     </div>
